// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate nested object should generate type for nested object 1`] = `
"export declare type myCreateFormInputValues = {
    firstName?: ValidationFunction<string>;
    isExplorer?: ValidationFunction<boolean>;
    bio?: {
        favoriteAnimal?: {
            animalMeta?: {
                family?: {
                    genus?: ValidationFunction<string>;
                };
                earliestRecord?: ValidationFunction<number>;
            };
        };
    };
};"
`;

exports[`should generate nested object should generate type for non nested object 1`] = `
"export declare type myCreateFormInputValues = {
    firstName?: ValidationFunction<string>;
    isExplorer?: ValidationFunction<boolean>;
};"
`;
